# lingxi

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
config/fewshot/: corpus_seeds.yaml  seeds.yaml
config/personas/: aria_social_graph.yaml  aria_social_graph.yaml.bak  catgirl.yaml  example_persona.yaml  tangkeke.yaml
docs/plans/: 2026-04-21-humanization-upgrade.md
docs/specs/: 2026-04-21-two-call-compression-design.md
src/lingxi/: app.py  paths.py
src/persona_agent/: __init__.py  app.py
tests/: conftest.py
tests/test_app/: test_cli_annotation.py  test_cli_fewshot_wired.py
tests/test_auth/: test_auth.py
tests/test_brain/: test_memory_tools.py  test_models.py  test_orchestrator.py  test_renderer.py  test_retrieval.py
tests/test_channels/: test_feishu_card_buttons.py  test_feishu_send_image.py  test_resolve_turn.py
tests/test_conversation/: test_engine.py  test_engine_annotation_record.py  test_engine_combo.py  test_engine_dynamic_fewshot.py  test_engine_seeds_bootstrap.py  test_prompt_assembly.py  test_responder_doubao_integration.py  test_response_cleaner.py  test_sticker_meta.py  test_tool_loop.py  test_turn_focus.py
tests/test_corpus/: test_builder.py  test_douban.py  test_filters.py
tests/test_facts/: test_core_memory.py  test_models.py  test_reflection_trigger.py  test_reflector.py  test_retriever.py  test_retriever_3d.py  test_retriever_by_id.py  test_scorer.py  test_store.py
tests/test_fewshot/: test_collector.py  test_models.py  test_retriever.py  test_seeds_loader.py  test_store.py
tests/test_inner_life/: test_axis_modulation.py  test_engagement_mode.py  test_store_atomic.py
tests/test_memory/: test_memory.py
tests/test_persona/: test_age_label.py  test_biography_selector.py  test_engagement.py  test_models.py
tests/test_pet/: test_sprite_mapper.py  test_state_endpoint.py
tests/test_planner/: test_daily_planner.py  test_executor.py
tests/test_planning/: test_planning.py
tests/test_proactive/: test_share_intent.py
tests/test_providers/: test_claude_prefill.py  test_registry.py  test_tool_use.py
tests/test_relational/: test_extractor.py  test_models.py  test_store.py  (+1 more)
tools/: build_fewshot_corpus.py  crawl_stickers.py  dedup_recent_events.py  embed_stickers.py  export_sft_dataset.py  inspect_llm.py  life_log.py  make_idle_apng.py  migrate_to_facts.py  recaption_stickers.py  review_turns.py  social_tick.py
(+233 files in other folders)
