[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingxi"
version = "0.1.0"
description = "Lingxi — a virtual persona agent with an inner life: memory, emotions, planning, and subjective relationships"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
vector-db = [
    "chromadb>=0.5.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
]
feishu = [
    "lark-oapi>=1.3.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
lingxi = "lingxi.app:main"
lingxi-server = "lingxi.web.server:main"
lingxi-feishu = "lingxi.channels.feishu_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingxi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
